# POD

./: .gitignore  README.md
data/: 4_8.matrix  BCH_16_63.matrix  BCH_16_63_g.matrix  BCH_16_64.matrix  BCH_16_64_g.matrix  BCH_29_127.matrix  BCH_29_127_g.matrix  BCH_29_128.matrix  BCH_29_128_g.matrix  BCH_36_63.matrix  BCH_36_63_g.matrix  BCH_36_64.matrix  BCH_36_64_g.matrix  BCH_51_63.matrix  BCH_51_63_g.matrix  BCH_51_64.matrix  BCH_51_64_g.matrix  BCH_64_31.matrix  BCH_Hmatrix_16_9.matrix  Gallager_4.matrix  Gallager_6.matrix  Gallager_8.matrix  LDPC_BG2_48_144.matrix  LDPC_BG2_48_144_g.matrix  LDPC_v1_12_16.matrix  LDPC_v2_12_16.matrix  PAC_128_ori.matrix  QR_17_9_5_G.matrix  QR_17_9_5_H.matrix  QR_23_12_7_G.matrix  QR_23_12_7_H.matrix  QR_31_16_7_G.matrix  QR_31_16_7_H.matrix  QR_41_21_9_G.matrix  QR_41_21_9_H.matrix  QR_47_24_11_G.matrix  QR_71_36_11_G.matrix  QR_73_37_13_G.matrix  QR_79_40_15_G.matrix  (+58 more)
project/OSD/: CMakeLists.txt  main.cpp
project/OSD/isit2026/: CMakeCache.txt  Makefile  OSD1.ini  OSD_performance  cmake_install.cmake
project/OSD/isit2026/OSD1/: OSD1_wb.ini  log.txt
project/OSD/itw2026/: CMakeCache.txt  Makefile  OSD_performance  cmake_install.cmake  eBCH_m7_t10_1.ini  eBCH_m7_t10_2.ini  eBCH_m7_t3_1.ini  eBCH_m7_t3_2.ini  eGolay24_2.ini
project/OSD/itw2026/eBCH_m7_t10_1/: log.txt
project/OSD/itw2026/eBCH_m7_t10_2/: eBCH_m7_t10_2_wb.ini  log.txt
project/OSD/itw2026/eBCH_m7_t3_1/: eBCH_m7_t3_1_wb.ini  log.txt
project/OSD/itw2026/eBCH_m7_t3_2/: eBCH_m7_t3_2_wb.ini
project/OSD/itw2026/eGolay24_2/: eGolay24_2_wb.ini  log.txt
(+642 files in other folders)
